--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myursus-website",
-  "homepage": "https://MojUrsus.github.io/Website",
+  "homepage": "https://mojursus.github.io",
   "private": true,
   "version": "0.0.0",
   "type": "module",
